--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -1,15 +1,14 @@
-.b1 {
+.one {
     background-color: black;
     color: white;
     font-weight: bold;
 }
 
-.b2 {
+.two {
     background-color: yellow;
 }
 
-.b1, 
-.b2 {
+.button {
     font-size: 28px;
     font-family: Helvetica, "Times New Roman", sans-serif;
 }
